--- a/src/main/_sass/_style.scss
+++ b/src/main/_sass/_style.scss
@@ -233,6 +233,9 @@ footer {
 
 .intro {
 
+  background-color: #fff;
+  padding-top: 60px;
+
   .unit { padding: 10px 0 40px; }
 
   p {
@@ -248,10 +251,14 @@ footer {
 
 /* Quickstart */
 
+.quickstart-container {
+  background-color: #fff
+}
+
 .quickstart {
-  background-color: #3F1F1F;
+  background-color: #4A90E2;
   color: #fff;
-  margin: 60px 0;
+  margin: 70px 0;
   @include box-shadow(inset 0 3px 10px rgba(0,0,0,.4));
 
   .content { padding: 0; }
@@ -285,6 +292,13 @@ footer {
     }
   }
 }
+
+/* Features */
+
+.features {
+  background-color: #fff;
+}
+
 
 /* Code */
 
@@ -340,7 +354,7 @@ footer {
     }
 
     .prompt {
-      color: #cd5c5c;
+      color: #4A90E2;
       -webkit-user-select: none;  /* Chrome all / Safari all */
       -moz-user-select: none;     /* Firefox all */
       -ms-user-select: none;      /* IE 10+ */
