Change Versions style to be white
Signed-off-by: Stevan Le Meur <stevan.lemeur@gmail.com>

--- a/src/main/_sass/_style.scss
+++ b/src/main/_sass/_style.scss
@@ -249,10 +249,19 @@ footer {
   .intro p { font-size: 3.2em; }
 }
 
+/* Version Table */
+.versions-table {
+
+  h2 {
+    color: #fff;
+  }
+
+}
+
 /* Quickstart */
 
 .quickstart-container {
-  background-color: #fff
+  background-color: #fff;
 }
 
 .quickstart {
