Fixed awesome fonts, updated per changes to che-docs that broke build, remove home page, /docs/index.html is now intro, removed assembly/build_war.yml which is not needed, added image border, and changed inline code style.

--- a/src/main/_includes/header.html
+++ b/src/main/_includes/header.html
@@ -6,7 +6,7 @@
   </nav>
   <div class="grid">
     <div class="unit one-third center-on-mobiles">
-        <a href="/">
+        <a href="https://codenvy.com/">
           <span class="sr-only">Codenvy</span>
           <img src="{{ base }}/docs/assets/imgs/codenvy/logo-codenvy.svg" alt="Codenvy Logo"  width="249" height="115">
         </a>
