--- a/src/main/_sass/_style.scss
+++ b/src/main/_sass/_style.scss
@@ -531,6 +531,7 @@ aside {
     min-height: 800px;
 
     img {
+      border: 1px solid rgba(0,0,0,0.06);
       width: 80%;
       display: block;
       margin-left: auto;
@@ -731,8 +732,8 @@ li > code,
 li> pre,
 h5 > code,
 .note > code {
-  background-color: #444;
-  color: #fff;
+  background-color: rgba(0,0,0,0.14);
+  color: #000;
   max-width: 100%;
   overflow-x: auto;
   vertical-align: middle;
