--- a/src/main/_includes/primary-nav-items.html
+++ b/src/main/_includes/primary-nav-items.html
@@ -1,12 +1,9 @@
 <ul>
-  <li class="{% if page.overview == true %}current{% endif %}">
-    <a href="{{ base }}/docs/index.html">Home</a>
-  </li>
   {% unless page.url contains '/docs/tutorials/' or page.url contains '/docs/openshift/' or page.url contains '/docs/artik/' %}
     {% assign docs_general = true %} 
   {% endunless  %}
   <li class="{% if page.url contains '/docs/' and docs_general == true and page.overview == null %}current{% endif %}">
-    <a href="{{ base }}/docs/getting-started/introduction/index.html">Docs</a>
+    <a href="{{ base }}/docs/index.html">Docs</a>
   </li>
   <li class="{% if page.url contains '/tutorials/' %}current{% endif %}">
     <a href="{{ base }}/docs/tutorials/multi-machine/index.html">Tutorials</a>
