--- a/src/main/_layouts/tutorials.html
+++ b/src/main/_layouts/tutorials.html
@@ -13,7 +13,7 @@ layout: default
             {% if page.tags[1] != null %} 
             <a href="https://github.com/{{ page.tags[0] }}/{{ page.tags[1] }}/blob/master/docs/{{ page.path | replace_first:'/che','' }}"><i class="fa fa-pencil"></i> &nbsp;Improve this page</a>
             {% else %} 
-            <a href="https://github.com/{{ page.tags[0] }}/{{ page.tags[0] }}/blob/master/docs/{{ page.path | replace_first:'/che','' }}"><i class="fa fa-pencil"></i> &nbsp;Improve this page</a>
+            <a href="https://github.com/codenvy/{{ page.tags[1] }}-docs/blob/master/src/main/{{ page.path }}"><i class="fa fa-pencil"></i> &nbsp;Improve this page</a>
             {% endif %}
           </div>
           <div class="doc-title">
