--- a/src/main/_includes/docs_ul.html
+++ b/src/main/_includes/docs_ul.html
@@ -6,7 +6,7 @@
   {% assign item_url = item_url | replace_first:'/start-','/getting-started/' | replace_first:'/admin-','/admin-guide/' %}
   {% assign item_url = item_url | replace_first:'/developer-','/developer-guide/' | replace_first:'/integration-','/integration-guide/' %}
   {% assign item_url = item_url | replace_first:'/tutorial-','/tutorials/' | replace_first:'/user-','/user-guide/' %}
-  {% assign item_url = item_url | replace_first:'/white-labels-','/white-labels/' %}
+  {% assign item_url = item_url | replace_first:'/labels-','/white-labels/' %}
   {% assign item_url = item_url | replace_first:'/ws-','/getting-started/' | replace_first:'/ide-','/user-guide/' %}
   {% assign p = site.documents | where:"url", item_url | first %}
   {% if p != null %} 
