--- a/src/main/_includes/docs_ul.html
+++ b/src/main/_includes/docs_ul.html
@@ -2,7 +2,7 @@
 <ul>
 {% for item in include.items %}
   {% assign item_url = item | prepend:"/docs/" | append:"/" %}
-  {% assign item_url = item_url | replace_first:'/docs/intro/','/docs/' %}
+  {% assign item_url = item_url | replace_first:'/docs/getting-started/','/docs/' %}
   {% assign item_url = item_url | replace_first:'/start-','/getting-started/' | replace_first:'/admin-','/admin-guide/' %}
   {% assign item_url = item_url | replace_first:'/developer-','/developer-guide/' | replace_first:'/integration-','/integration-guide/' %}
   {% assign item_url = item_url | replace_first:'/tutorial-','/tutorials/' | replace_first:'/user-','/user-guide/' %}
