--- a/src/main/_layouts/docs.html
+++ b/src/main/_layouts/docs.html
@@ -11,9 +11,9 @@ layout: default
         <article>
           <div class="improve right hide-on-mobiles">
             {% if page.tags[1] != null %} 
-            <a href="https://github.com/codenvy/{{ page.tags[1] }}-docs/blob/master/src/main/{{ page.path | replace_first:'/che','' }}"><i class="fa fa-pencil"></i> &nbsp;Improve this page</a>
+            <a href="https://github.com/codenvy/docs/blob/master/src/main/{{ page.path | replace_first:'/che','' }}"><i class="fa fa-pencil"></i> &nbsp;Improve this page</a>
             {% else %} 
-            <a href="https://github.com/{{ page.tags[0] }}/{{ page.tags[0] }}-docs/blob/master/src/main/{{ page.path }}"><i class="fa fa-pencil"></i> &nbsp;Improve this page</a>
+            <a href="https://github.com/{{ page.tags[0] }}/docs/blob/master/src/main/{{ page.path }}"><i class="fa fa-pencil"></i> &nbsp;Improve this page</a>
             {% endif %}
           </div>
           <div class="doc-title">
