--- a/src/main/_includes/primary-nav-items.html
+++ b/src/main/_includes/primary-nav-items.html
@@ -9,6 +9,6 @@
     <a href="{{ base }}/docs/tutorials/multi-machine/index.html">Tutorials</a>
   </li>
   <li>
-    <a href="{{ site.repository }}/tree/master/docs"><span class="hide-on-mobiles">View on </span>GitHub</a>
+    <a href="{{ site.repository }}"><span class="hide-on-mobiles">View on </span>GitHub</a>
   </li>
 </ul>
