--- a/src/main/_includes/header.html
+++ b/src/main/_includes/header.html
@@ -8,7 +8,7 @@
     <div class="unit one-third center-on-mobiles">
         <a href="https://codenvy.com/">
           <span class="sr-only">Codenvy</span>
-          <img src="{{ base }}/docs/assets/imgs/codenvy/logo-codenvy.svg" alt="Codenvy Logo"  width="249" height="115">
+          <img src="{{ base }}/docs/assets/imgs/codenvy/logo-codenvy-white.png" alt="Codenvy Logo"  width="249" height="115">
         </a>
     </div>
     <nav class="main-nav unit two-thirds hide-on-mobiles">
