--- a/src/main/_layouts/default.html
+++ b/src/main/_layouts/default.html
@@ -9,7 +9,7 @@
       var image = images[i];
       var parentElement = image.parentElement;
       var a = document.createElement('a');
-      if (! image.getAttribute('src').includes("logo-codenvy.svg") ){
+      if (! image.getAttribute('src').includes("logologo-codenvy-white.png") ){
           a.href = image.getAttribute('src');
           a.target = "_blank";
           a.appendChild(image);
