--- a/src/main/_sass/_style.scss
+++ b/src/main/_sass/_style.scss
@@ -14,7 +14,7 @@ body {
   font: 300 16px Helvetica, Arial, sans-serif;
   color: #393939;
   line-height: 1.5em;
-  background-color: #1d2e55;
+  background-color: #000000;
   @include box-shadow(inset 0 3px 30px rgba(0,0,0,.3));
   //text-shadow: 0 1px 3px rgba(0,0,0,.5);
   -webkit-font-feature-settings: "kern" 1;
@@ -115,9 +115,10 @@ nav {
     &.current {
 
       a {
-        background-color: #4A90E2;
+        background-color: #00ff8c;
         @include box-shadow(inset 0 1px 0 rgba(255,255,255,.2), 0 1px 5px rgba(0,0,0,.3));
         color: #fff;
+        font-weight: bold;
       }
     }
   }
@@ -475,12 +476,12 @@ aside {
     margin-bottom: -5px;
     text-transform: uppercase;
     font-size: 14px;
-    color: #fbb84d;
+    color: #4dffd5;
     font-weight: 400;
     padding: 0 0 2px 30px;
     margin-left: -30px;
     display: inline-block;
-    border-bottom: 1px solid #fbb84d;
+    border-bottom: 1px solid #4dffd5;
   }
 
   ul {
@@ -495,7 +496,7 @@ aside {
     a {
       font-size: 12px;
       position: relative;
-      color: #4A90E2;
+      color: #00ff8c;
     }
   }
 
@@ -510,10 +511,10 @@ aside {
 
     &.current a:before {
       content: "";
-      border-color: transparent transparent transparent #4A90E2;
+      border-color: transparent transparent transparent #00ff8c;
       border-style: solid;
       border-width: 10px;
-      color: #4A90E2;
+      color: #00ff8c;
       width: 0;
       height: 0;
       position: absolute;
