--- a/src/main/_sass/_style.scss
+++ b/src/main/_sass/_style.scss
@@ -117,7 +117,7 @@ nav {
       a {
         background-color: #00ff8c;
         @include box-shadow(inset 0 1px 0 rgba(255,255,255,.2), 0 1px 5px rgba(0,0,0,.3));
-        color: #fff;
+        color: #000000;
         font-weight: bold;
       }
     }
