Update favicon and logo to svg.

--- a/src/main/_includes/header-github-io.html
+++ b/src/main/_includes/header-github-io.html
@@ -6,7 +6,7 @@
     <div class="unit one-third center-on-mobiles">
         <a href="/">
           <span class="sr-only">Codenvy</span>
-          <img src="{{ base }}/docs/assets/imgs/logo-codenvy-white.png" alt="Codenvy Logo"  width="249" height="115">
+          <img src="{{ base }}/docs/assets/imgs/codenvy/Codenvywordmarkwhite.svg" alt="Codenvy Logo"  width="249" height="115">
         </a>
     </div>
     <nav class="main-nav unit two-thirds hide-on-mobiles">
