--- a/src/main/_includes/top.html
+++ b/src/main/_includes/top.html
@@ -7,8 +7,10 @@
   <meta name="generator" content="Jekyll v{{ jekyll.version }}">
   <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Lato:300,300italic,400,400italic,700,700italic,900">
   <link rel="stylesheet" href="{{ base }}/docs/assets/css/screen.css">
-  <link rel="icon" type="image/x-icon" href="{{ base }}/docs/assets/imgs/codenvy/favicon.ico">
-  <!--[if lt IE 9]>
+  <link rel="shortcut icon" href="{{ base }}/docs/assets/imgs/codenvy/favicon.ico" >
+  <link rel="icon" type="image/png" href="{{ base }}/docs/assets/imgs/codenvy/16x16" sizes="16x16">
+  <link rel="icon" type="image/png" href="{{ base }}/docs/assets/imgs/codenvy/32x32" sizes="32x32">
+  <!--[if lt IE 9]> 
   <script src="/js/html5shiv.min.js"></script>
   <script src="/js/respond.min.js"></script>
   <![endif]-->
