--- a/src/main/_includes/footer.html
+++ b/src/main/_includes/footer.html
@@ -7,7 +7,7 @@
       <p>
         Proudly hosted by
         <a href="https://github.com">
-          <img src="{{base}}/logo-codenvy.svg" width="100" height="30" alt="GitHub • Social coding">
+          <img src="{{ base }}/docs/assets/imgs/codenvy/Codenvywordmarkwhite.svg" width="100" height="30" alt="GitHub • Social coding">
         </a>
       </p>
     </div>
