--- a/src/main/_includes/docs_option.html
+++ b/src/main/_includes/docs_option.html
@@ -1,7 +1,18 @@
 {% include base.html %}
+<ul>
 {% for item in include.items %}
-  {% assign layout_type = page.layout | prepend:"/" | append:"/" %}
   {% assign item_url = item | prepend:"/docs/" | append:"/" %}
-  {% assign doc = site.docs | where: "url", item_url | first %}
-  <option value="{{ doc.url }}">{{ doc.title }}</option>
+  {% assign item_url = item_url | replace_first:'/docs/getting-started/','/docs/' %}
+  {% assign item_url = item_url | replace_first:'/start-','/getting-started/' | replace_first:'/admin-','/admin-guide/' %}
+  {% assign item_url = item_url | replace_first:'/developer-','/developer-guide/' | replace_first:'/integration-','/integration-guide/' %}
+  {% assign item_url = item_url | replace_first:'/tutorial-','/tutorials/' | replace_first:'/user-','/user-guide/' %}
+  {% assign item_url = item_url | replace_first:'/labels-','/white-labels/' | replace_first:'/factory-','/factory/' %}
+  {% assign item_url = item_url | replace_first:'/devops-','/getting-started/' | replace_first:'/ide-','/user-guide/' %}
+  {% assign p = site.documents | where:"url", item_url | first %}
+  {% if p != null %} 
+    <option value="{{ base }}{{ p.url }}index.html">{{ p.title }}</option>
+  {% else %} 
+    <option value="">Error Generating Page Link. Contact Maintainer.{{item_url}}</option>
+  {% endif %}
 {% endfor %}
+</ul>
